--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
       
     </div>
     </main>
-    <script src="./imc.js"></script>
+    <script src="./imc.js">
+    
+     </script>
 </body>
 </html>
