--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Calculando IMC</title>
 </head>
 
-<body>
+<body> 
+    <p>primeiro projeto com GitHub</p>
     
    <main>
        <div class="container">
