adicionei um parágrafo
<loren>

--- a/siteexemplo/index.html
+++ b/siteexemplo/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body> 
-    <p>primeiro projeto com GitHub</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus placeat enim animi, veritatis nisi totam explicabo, in impedit voluptatibus dolorum aliquid facere perferendis laborum necessitatibus eos labore harum. Nostrum, beatae.</p>
     
    <main>
        <div class="container">
